--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,9 @@
           <ul class="site-nav list">
             <li><a href="./index.html" class="link nav-link">Studio</a></li>
             <li>
-              <a href="./portfolio.html" class="link nav-link">Portfolio</a>
+              <a href="./portfolio.html" class="link nav-link current"
+                >Portfolio</a
+              >
             </li>
             <li><a href="" class="link nav-link">Contacts</a></li>
           </ul>
@@ -64,12 +66,21 @@
           <ul class="list card-set portfolio">
             <li class="card-set-item project">
               <a href="" class="link card-link">
-                <img
-                  src="./images/banking.jpg"
-                  alt="app for banks"
-                  width="360"
-                  height="300"
-                />
+                <div class="card-thumb">
+                  <img
+                    src="./images/banking.jpg"
+                    alt="app for banks"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay-card">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card-text">
                   <h2 class="subtitle">Banking App Interface Concept</h2>
                   <p class="text">App</p>
@@ -78,12 +89,21 @@
             </li>
             <li class="card-set-item project">
               <a href="" class="link card-link">
-                <img
-                  src="./images/payment.jpg"
-                  alt="pay by phone"
-                  width="360"
-                  height="300"
-                />
+                <div class="card-thumb">
+                  <img
+                    src="./images/payment.jpg"
+                    alt="app for banks"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay-card">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card-text">
                   <h2 class="subtitle">Cashless Payment</h2>
                   <p class="text">Marketing</p>
@@ -92,12 +112,21 @@
             </li>
             <li class="card-set-item project">
               <a href="" class="link card-link">
-                <img
-                  src="./images/meditation.jpg"
-                  alt="app for maditation"
-                  width="360"
-                  height="300"
-                />
+                <div class="card-thumb">
+                  <img
+                    src="./images/meditation.jpg"
+                    alt="app for banks"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay-card">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card-text">
                   <h2 class="subtitle">Meditation App</h2>
                   <p class="text">App</p>
@@ -106,12 +135,21 @@
             </li>
             <li class="card-set-item project">
               <a href="" class="link card-link">
-                <img
-                  src="./images/taxi.jpg"
-                  alt="taxi driver uses a special service"
-                  width="360"
-                  height="300"
-                />
+                <div class="card-thumb">
+                  <img
+                    src="./images/taxi.jpg"
+                    alt="app for banks"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay-card">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card-text">
                   <h2 class="subtitle">Taxi Service</h2>
                   <p class="text">Marketing</p>
@@ -120,12 +158,21 @@
             </li>
             <li class="card-set-item project">
               <a href="" class="link card-link">
-                <img
-                  src="./images/screen-Illustrations.jpg"
-                  alt="example of a phone screen illustration"
-                  width="360"
-                  height="300"
-                />
+                <div class="card-thumb">
+                  <img
+                    src="./images/screen-Illustrations.jpg"
+                    alt="app for banks"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay-card">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card-text">
                   <h2 class="subtitle">Screen Illustrations</h2>
                   <p class="text">Design</p>
@@ -134,12 +181,21 @@
             </li>
             <li class="card-set-item project">
               <a href="" class="link card-link">
-                <img
-                  src="./images/online-courses.jpg"
-                  alt="girl is studying with a phone"
-                  width="360"
-                  height="300"
-                />
+                <div class="card-thumb">
+                  <img
+                    src="./images/online-courses.jpg"
+                    alt="app for banks"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay-card">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card-text">
                   <h2 class="subtitle">Online Courses</h2>
                   <p class="text">Marketing</p>
@@ -148,12 +204,21 @@
             </li>
             <li class="card-set-item project">
               <a href="" class="link card-link">
-                <img
-                  src="./images/instagram.jpg"
-                  alt="examples of instastory"
-                  width="360"
-                  height="300"
-                />
+                <div class="card-thumb">
+                  <img
+                    src="./images/instagram.jpg"
+                    alt="app for banks"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay-card">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card-text">
                   <h2 class="subtitle">Instagram Stories Concept</h2>
                   <p class="text">Design</p>
@@ -162,12 +227,21 @@
             </li>
             <li class="card-set-item project">
               <a href="" class="link card-link">
-                <img
-                  src="./images/organic-food.jpg"
-                  alt="woman with a net with fresh fruits and vegetables"
-                  width="360"
-                  height="300"
-                />
+                <div class="card-thumb">
+                  <img
+                    src="./images/organic-food.jpg"
+                    alt="app for banks"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay-card">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card-text">
                   <h2 class="subtitle">Organic Food</h2>
                   <p class="text">Web Site</p>
@@ -176,12 +250,21 @@
             </li>
             <li class="card-set-item project">
               <a href="" class="link card-link">
-                <img
-                  src="./images/fresh-coffee.jpg"
-                  alt="barista is making fresh coffee"
-                  width="360"
-                  height="300"
-                />
+                <div class="card-thumb">
+                  <img
+                    src="./images/fresh-coffee.jpg"
+                    alt="app for banks"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay-card">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card-text">
                   <h2 class="subtitle">Fresh Coffee</h2>
                   <p class="text">Web Site</p>
